Release x.x.x
=============

* [ENH] Optional ICA reports for identifying spatiotemporal artifacts (#412)
* [ENH] Add --profile flag (#435)
* [ENH] Crashfiles are saved in plain text to improve portability (#434)
* [FIX] Fixes EPI mask erosion (#442)
* [ENH] MNI corregistration uses 2mm targets to improve performance (#442)


Release 0.9.1
=============

* [ENH] Add mriqc version and input image hash to IQMs json file (#432)
* [FIX] Affine and warp transforms are now applied in the correct order (#431)

Release 0.9.0-2
===============

* [ENH] Revise Docker paths (#429)
* [FIX] Greedy participant selection (#426)
* [FIX] Pin pybids to new version 0.1.0 (#427)
* [FIX] Amends sloppy PR #425 (#428)

Release 0.9.0-1
===============

* [FIX] BOLD reports clipped IQMs after spikes_num (#425)
* [FIX] Unicode error writing group reports (#424)
* [FIX] Respect Nifi header in fMRI conform node (#415)
* [DOC] Deep revision of documentation (#411, #416)
* [ENH] Added sphinx extension to plot workflow graphs (#411)
* [FIX] Removed repeated bias correction on anatomical workflows (#410)
* [FIX] Race condition in bold workflow when using shared workdir (#409)
* [FIX] Tests (#408, #407, #405)
* [FIX] Remove CDN for group level reports (#406)
* [FIX] Unused connection, matplotlib segfault (#403, #402)
* [ENH] Skip SpikeFFT detector by default (#400)
* [ENH] Use float32 (#399)
* [ENH] Spike finder performance improvoments (#398)
* [ENH] Basic T2w workflow (#394)
* [ENH] Re-enable 3dvolreg (#390)
* [ENH] Add T1w classifier (#389)

Release 0.9.0-0
===============

* [FIX] Remove non-repeatable step from pipeline (#369)
* [ENH] Improve group level command line, with more informative output when no IQMs are found for a modality (#372)
* [ENH] Make group reports self-contained (#333)
* [FIX] New mosaics, based on old ones (#361, #360, #334)
* [FIX] Require numpy>=1.12 to avoid casting problems (#356)
* [FIX] Add support for acq and rec tags of BIDS (#346)