@@ -1,3 +1,3 @@
 numpy>=1.12.0
-git+https://github.com/nipy/nipype.git@d38748132cb02ca6bad3150826fc5b37e92ae3ad#egg=nipype
-git+https://github.com/poldracklab/niworkflows.git@f1778e7502a65f3dec4d4323a49170cac01feb7b#egg=niworkflows
+git+https://github.com/nipy/nipype.git@c15df990c1e0849aa789bc15aae286b0a6c16b6c#egg=nipype
+git+https://github.com/chrisfilo/niworkflows.git@31922c5a3bce9be0651666c611ea807c403f8f69#egg=niworkflows
